Inserted newest information on events
Edited entries for events tables in stats_club.db

--- a/Intro_SQL_Presentation.slides.html
+++ b/Intro_SQL_Presentation.slides.html
@@ -1746,11 +1746,12 @@ div.output_prompt {
 <p><p class="gap2"<p>
 </center>
 <img src="Images/exploits_of_a_mom.png" alt="alt text"></p>
-<style type="text/css">
+<p><style type="text/css">
 .input_prompt, .input_area, .output_prompt {
     display:none !important;
 }
 </style>
+Source for picture: XKCD (Randall Munroe) <a href="http://xkcd.com/327/">http://xkcd.com/327/</a></p>
 </div>
 </div>
 </div></section>
@@ -6685,7 +6686,7 @@ In&nbsp;[20]:
 </div>
 
 </div>
-    </div><div class="fragment">
+    </div></section><section>
     
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -6697,8 +6698,7 @@ FROM exec INNER JOIN event ON exec.questid = event.organizer;
 </code></pre>
 </div>
 </div>
-</div>
-    </div><div class="fragment">
+</div><div class="fragment">
     
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
