--- a/Intro_SQL_Presentation.slides.html
+++ b/Intro_SQL_Presentation.slides.html
@@ -5695,7 +5695,7 @@ WHERE column_name &lt; ALL (subquery_returning_one_column);
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Example:</strong> What are the expenses for non-social events?</p>
+<p><strong>Example:</strong> What are the expenses for non-social events? (<code>ALL</code>, <code>ANY</code>, and <code>SOME</code> are not implmented in SQLite)</p>
 </div>
 </div>
 </div><div class="fragment">
