updated presentation and changed database
updated presentation and changed database to use on update

--- a/Using_SQL_with_Python.slides.html
+++ b/Using_SQL_with_Python.slides.html
@@ -257,7 +257,11 @@ div.text_cell_render{
 
 <p class="gap2"<p>
 
-</center><p><img src="Images/python-logo-inkscape.svg" alt="alt text"></p>
+</center><style type="text/css">
+.input_prompt, .output_prompt {
+    display:none !important;
+}
+</style><p><img src="Images/python-logo-inkscape.svg" alt="alt text"></p>
 
 </div>
 </div>
